Prevent contact form "mode select" from wrapping horribly on phones

--- a/src/components/radio-options/style.sass
+++ b/src/components/radio-options/style.sass
@@ -2,6 +2,9 @@
 @import '../../fonts'
 
 
+.radio-options
+  white-space: nowrap
+
 input
   display: none
 
